version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/FE/NASTRAN/NastranOption.rst.txt
.. vale off



:class:`NastranOption`
======================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.FE.NASTRAN.NastranOption(name: str, value: str)

   Bases: :py:obj:`object`


   
   Option.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: NastranOption

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Name`
            - Gets the option name.
          * - :py:attr:`~Value`
            - Gets the value.







Property detail
---------------
.. py:property:: Name
   :type: Optional[str]


   
   Gets the option name.
















   ..
       !! processed by numpydoc !!

.. py:property:: Value
   :type: Optional[str]


   
   Gets the value.
















   ..
       !! processed by numpydoc !!







.. vale on