version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Automation/Mechanical/FE/NASTRAN/NastranOption.rst.txt
.. vale off



:class:`NastranOption`
======================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Automation.Mechanical.FE.NASTRAN.NastranOption(name: str, value: str)

   Bases: :py:obj:`object`


   
   Option.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: NastranOption

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Name`
            - Gets the option name.
          * - :py:attr:`~Value`
            - Gets the value.







Property detail
---------------
.. py:property:: Name
   :type: Optional[str]


   
   Gets the option name.
















   ..
       !! processed by numpydoc !!

.. py:property:: Value
   :type: Optional[str]


   
   Gets the value.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on